added splitView controller

--- a/Cassini/Base.lproj/Main.storyboard
+++ b/Cassini/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="seG-FA-AR9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cRv-vj-9yB">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -16,13 +16,51 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cWg-Lv-MK2">
+                                <rect key="frame" x="227" y="266" width="147" height="67"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="46"/>
+                                <state key="normal" title="Cassini"/>
+                                <connections>
+                                    <segue destination="seG-FA-AR9" kind="showDetail" identifier="Cassini" id="xvY-my-9h3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qgC-0U-5H1">
+                                <rect key="frame" x="247" y="191" width="106" height="67"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="46"/>
+                                <state key="normal" title="Earth"/>
+                                <connections>
+                                    <segue destination="seG-FA-AR9" kind="showDetail" identifier="Earth" id="ZwT-29-kdM"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4N-tL-THq">
+                                <rect key="frame" x="234" y="329" width="133" height="67"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="46"/>
+                                <state key="normal" title="Saturn"/>
+                                <connections>
+                                    <segue destination="seG-FA-AR9" kind="showDetail" identifier="Saturn" id="mJY-0H-Oio"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="d4N-tL-THq" firstAttribute="top" secondItem="cWg-Lv-MK2" secondAttribute="bottom" constant="-4" id="CFj-uv-FRD"/>
+                            <constraint firstItem="cWg-Lv-MK2" firstAttribute="top" secondItem="qgC-0U-5H1" secondAttribute="bottom" constant="8" id="SyW-Mh-NiK"/>
+                            <constraint firstItem="qgC-0U-5H1" firstAttribute="centerX" secondItem="cWg-Lv-MK2" secondAttribute="centerX" id="bX0-Do-q4x"/>
+                            <constraint firstItem="cWg-Lv-MK2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="lLg-Dj-ZEX"/>
+                            <constraint firstItem="cWg-Lv-MK2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lg9-Wk-KVG"/>
+                            <constraint firstItem="d4N-tL-THq" firstAttribute="centerX" secondItem="cWg-Lv-MK2" secondAttribute="centerX" id="oEg-Fk-gNT"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="hbq-xp-zau"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-9" y="256"/>
+            <point key="canvasLocation" x="1311" y="967"/>
         </scene>
         <!--Image View Controller-->
         <scene sceneID="ycZ-Mr-fIP">
@@ -41,7 +79,40 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V3r-Dm-nwg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="816" y="256"/>
+            <point key="canvasLocation" x="513" y="1712"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Vv9-xK-9LG">
+            <objects>
+                <navigationController id="HWv-CD-aCw" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YJD-Yt-XeW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="MHx-zs-Ekz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cp1-Bv-zMb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="513" y="967"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="68Q-vq-ATC">
+            <objects>
+                <splitViewController id="cRv-vj-9yB" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="HWv-CD-aCw" kind="relationship" relationship="masterViewController" id="EYi-2h-Wzc"/>
+                        <segue destination="seG-FA-AR9" kind="relationship" relationship="detailViewController" id="Vq8-7E-AbP"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4yd-pM-vLT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-419" y="1207"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="mJY-0H-Oio"/>
+    </inferredMetricsTieBreakers>
 </document>
