--- a/Cassini/Base.lproj/Main.storyboard
+++ b/Cassini/Base.lproj/Main.storyboard
@@ -73,13 +73,28 @@
                     <view key="view" contentMode="scaleToFill" id="qCs-je-16t">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZzS-GK-QkY">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <animations/>
+                            </scrollView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ZzS-GK-QkY" secondAttribute="trailing" id="Ls8-fG-BKz"/>
+                            <constraint firstItem="ZzS-GK-QkY" firstAttribute="top" secondItem="qCs-je-16t" secondAttribute="top" id="YKv-bj-qQa"/>
+                            <constraint firstItem="ZzS-GK-QkY" firstAttribute="bottom" secondItem="wni-VM-LBT" secondAttribute="top" id="hse-lw-n8k"/>
+                            <constraint firstItem="ZzS-GK-QkY" firstAttribute="leading" secondItem="qCs-je-16t" secondAttribute="leading" id="zGL-li-IYU"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="ZzS-GK-QkY" id="tyT-OD-czC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V3r-Dm-nwg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="513" y="1712"/>
+            <point key="canvasLocation" x="584" y="1715"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Vv9-xK-9LG">
